--- a/app/src/main/res/layout/forecast_item.xml
+++ b/app/src/main/res/layout/forecast_item.xml
@@ -26,6 +26,7 @@
         android:id="@+id/max_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="right"
         android:textColor="#fff"/>
@@ -34,6 +35,7 @@
         android:id="@+id/min_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="right"
         android:textColor="#fff"
